# XInControllerPatch

./: CMakeLists.txt  LICENCE  README.md
src/: dllmain.cpp  dllmain1_3.def  dllmain1_4.def  dllmain9_1_0.def  funcptrs.h  macros.h
test/: XInputTest.cpp
